# soldr

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  justfile  soldr.example.toml
.github/: CODEOWNERS
.github/workflows/: ci.yml  pr-audit.yml  release-build.yml
benches/: main.rs
certs/: README.md  localhost.crt  localhost.key
crates/proxy/: Cargo.toml
crates/proxy/benches/: common.rs
crates/proxy/examples/: origin.rs
crates/proxy/migrations/: 20230817111231_intialize.sql
crates/proxy/src/: alert.rs  cache.rs  config.rs  db.rs  lib.rs  main.rs  mgmt.rs  origin.rs  proxy.rs  queue.rs  request.rs  response.rs  retry.rs
crates/proxy/tests/integration/: common.rs  ingest.rs  mgmt.rs  queue.rs
crates/shared_types/: Cargo.toml
crates/shared_types/src/: lib.rs
crates/ui/: Cargo.toml
crates/ui/src/: main.rs
crates/ui/static/: style.css
docs/: README.md  book.toml
docs/src/: SUMMARY.md  configuration.md  installation.md
examples/: example_config  origin.rs
ingest/: .env  .eslintrc.cjs  package-lock.json  package.json  temp.sql
ingest/src/: index.js  logger.js  server.js
migrations/: 20230817111231_intialize.sql
src/: cache.rs  db.rs  error.rs  ingest.rs  lib.rs  main.rs  mgmt.rs  origin.rs  proxy.rs  queue.rs  request.rs  retry.rs
tests/: common.rs  ingest.rs  mgmt.rs  queue.rs
tests/common/: mod.rs
tests/integration/: ingest.rs  main.rs  mgmt.rs  queue.rs
