[package]
name = "soldr"
version = "0.1.0"
edition = "2021"
default-run = "soldr"

[dependencies]
anyhow = "1.0"
axum = "0.7"
axum-server = { version = "0.6", features = ["tls-rustls"] }
clap = { version = "4.3.8", features = ["derive"] }
hyper = { version = "0.14", features = ["full"] }
lettre = { version = "0.10.4", default-features = false, features = ["smtp-transport", "tokio1", "tokio1-rustls-tls", "builder"] }
parking_lot = "0.12.1"
rand = "0.8.5"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
shared_types = { version = "0.0.0", path = "../shared_types" }
sqlx = { version = "0.7.1", features = ["sqlite", "runtime-tokio-rustls"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1.0", features = ["full"] }
toml = "0.7.5"
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["trace", "cors"] }

[dev-dependencies]
criterion = {version = "0.4", features = ["async_tokio"]}
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }

[[bench]]
name = "soldr-benchmark"
path = "benches/main.rs"
harness = false
