[package]
name = "ui"
version = "0.0.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
axum = "0.6.20"
bpaf = "0.9.8"
maud = { version = "0.25.0", features = ["axum"] }
reqwest = { version = "0.11.20", features = ["json"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
shared_types = { version = "0.0.0", path = "../shared_types" }
tokio = { version = "1.32.0", features = ["full"] }
tower-http = { version = "0.4.4", features = ["fs", "trace"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = { version = "2.4.1", features = ["serde"] }
